# LARP

./: about.markdown  cfp.html  cfp.markdown  contact.html  contact.markdown  flake.nix  index.html  invited-speakers.html  invited-speakers.markdown  larp.cabal  larp.hs  milling.cabal  milling.hs  program.html  program.markdown  registration.html  registration.markdown  venue.html  venue.markdown
.github/workflows/: deploy.yml
css/: default.css
templates/: default.html
