name:               larp 
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable larp
  main-is:          larp.hs
  build-depends:    base == 4.*
                  , hakyll
                  , hakyll-images
                  , filepath
                  , binary
                  , time
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
