name:               milling 
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable milling
  main-is:          milling.hs
  build-depends:    base == 4.*
                  , hakyll
                  , hakyll-images
                  , filepath
                  , binary
                  , time
                  , time-locale-compat
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
